--- a/Jest-Crash-Course-Laiture/package.json
+++ b/Jest-Crash-Course-Laiture/package.json
@@ -12,5 +12,8 @@
   "devDependencies": {
     "@types/jest": "^30.0.0",
     "jest": "^30.0.3"
+  },
+  "dependencies": {
+    "http-status-toolkit": "^1.0.1"
   }
 }
